Fix scrollbar appear in firefox

--- a/style.css
+++ b/style.css
@@ -148,6 +148,10 @@ footer > a > i{
     width: 0px;
 }
 
+* {
+    scrollbar-width: none;
+}
+
 /* ========== CSS for Slider ========== */
 
 #slider {
